# iokit

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/iok/: __init__.py  state.py
src/iok/extensions/: __init__.py  gz.py  txt.py
src/iokit/: __init__.py  checksum.py  state.py
src/iokit/extensions/: __init__.py  _audio.py  audio.py  auto.py  dat.py  enc.py  env.py  gz.py  image.py  json.py  jsonl.py  npy.py  table.py  tar.py  txt.py  yaml.py  zip.py
src/iokit/extensions/backend/audio/: adapter.py  codec.py  soundfile.py
src/iokit/scheme/: waveform.py
src/iokit/storage/: __init__.py  local.py  storage.py  web.py
src/iokit/tools/: __init__.py  auto.py  time.py
tests/: test_audio.py  test_auto_state.py  test_dat.py  test_download_file.py  test_encryption.py  test_env.py  test_filter_states.py  test_gzip.py  test_image.py  test_json.py  test_jsonl.py  test_npy.py  test_save_temp.py  test_state_inheritance.py  test_table.py  test_tar.py  test_txt.py  test_yaml.py  test_zip.py
