[project]
name = "iokit"
description = "Input Output Kit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dynamic = ["version"]
authors = [
    {name = "Vladislav A. Proskurov", email = "rilshok@pm.me"},
]
dependencies = [
    "humanize>=4.9.0",
    "jsonlines>=4.0.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.1",
    "pytz>=2024.1",
    "requests>=2.32.3",
    "typing-extensions>=4.8.0",
    "cryptography>=41.0.7",
    "numpy>=1.21.1",
    "soundfile>=0.12.1",
]

[tool.setuptools.dynamic]
version = {attr = "iokit.__version__"}

[project.optional-dependencies]
dev = ["iokit[lint,test]"]
lint = [
    "mypy>=1.7.1",
    "ruff>=0.6.3",
    "types-pytz>=2024.1",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.12",
    "types-python-dateutil>=2.8.19",
]
test = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/rilshok/iokit"
Repository = "https://github.com/rilshok/iokit.git"
Issues = "https://github.com/rilshok/iokit/issues"

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM",# flake8-simplify
    "I", # isort
]

[tool.vulture]
make_whitelist = true
sort_by_size = true
verbose = false
min_confidence = 100
paths = ["src/iokit"]
